fix(rest): Fix inconsistant naming of TemplateStorage
